fix container getting too wide on larger screens

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,15 @@ img {
   max-width: 100%;
 }
 
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  max-width: 960px;
+}
+
 .hover-underline,
 .nav-item {
   position: relative;
